Dependency/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function
Rule 2     program -> create_patient
Rule 3     program -> add_symptoms
Rule 4     program -> list_symptoms
Rule 5     program -> diagnose_patient
Rule 6     program -> specific_diagnose
Rule 7     program -> add_conditions
Rule 8     program -> create_illness
Rule 9     program -> remove_illness
Rule 10    program -> remove_patient
Rule 11    program -> queue
Rule 12    program -> attend
Rule 13    program -> NEWLINE
Rule 14    create_illness -> AILMENT LP ID RP PERIOD CREATE LP RP
Rule 15    remove_illness -> AILMENT LP ID RP PERIOD REMOVE LP RP
Rule 16    function -> ID
Rule 17    create_patient -> ID PERIOD CREATE LP RP
Rule 18    add_conditions -> AILMENT LP ID RP PERIOD ADD LP ID RP
Rule 19    add_symptoms -> ID PERIOD HAS LP ID RP
Rule 20    list_symptoms -> ID PERIOD LIST LP RP
Rule 21    remove_patient -> ID PERIOD REMOVE LP RP
Rule 22    diagnose_patient -> ID PERIOD DIAGNOSE LP RP
Rule 23    specific_diagnose -> ID PERIOD AILMENT LP ID RP PERIOD DIAGNOSE LP RP
Rule 24    queue -> ID LP ID RP
Rule 25    attend -> ID LP RP

Terminals, with rules where they appear

ADD                  : 18
AILMENT              : 14 15 18 23
CREATE               : 14 17
DIAGNOSE             : 22 23
HAS                  : 19
ID                   : 14 15 16 17 18 18 19 19 20 21 22 23 23 24 24 25
LIST                 : 20
LP                   : 14 14 15 15 17 18 18 19 20 21 22 23 23 24 25
NEWLINE              : 13
PERIOD               : 14 15 17 18 19 20 21 22 23 23
REMOVE               : 15 21
RP                   : 14 14 15 15 17 18 18 19 20 21 22 23 23 24 25
error                : 

Nonterminals, with rules where they appear

add_conditions       : 7
add_symptoms         : 3
attend               : 12
create_illness       : 8
create_patient       : 2
diagnose_patient     : 5
function             : 1
list_symptoms        : 4
program              : 0
queue                : 11
remove_illness       : 9
remove_patient       : 10
specific_diagnose    : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function
    (2) program -> . create_patient
    (3) program -> . add_symptoms
    (4) program -> . list_symptoms
    (5) program -> . diagnose_patient
    (6) program -> . specific_diagnose
    (7) program -> . add_conditions
    (8) program -> . create_illness
    (9) program -> . remove_illness
    (10) program -> . remove_patient
    (11) program -> . queue
    (12) program -> . attend
    (13) program -> . NEWLINE
    (16) function -> . ID
    (17) create_patient -> . ID PERIOD CREATE LP RP
    (19) add_symptoms -> . ID PERIOD HAS LP ID RP
    (20) list_symptoms -> . ID PERIOD LIST LP RP
    (22) diagnose_patient -> . ID PERIOD DIAGNOSE LP RP
    (23) specific_diagnose -> . ID PERIOD AILMENT LP ID RP PERIOD DIAGNOSE LP RP
    (18) add_conditions -> . AILMENT LP ID RP PERIOD ADD LP ID RP
    (14) create_illness -> . AILMENT LP ID RP PERIOD CREATE LP RP
    (15) remove_illness -> . AILMENT LP ID RP PERIOD REMOVE LP RP
    (21) remove_patient -> . ID PERIOD REMOVE LP RP
    (24) queue -> . ID LP ID RP
    (25) attend -> . ID LP RP

    NEWLINE         shift and go to state 14
    ID              shift and go to state 15
    AILMENT         shift and go to state 16

    program                        shift and go to state 1
    function                       shift and go to state 2
    create_patient                 shift and go to state 3
    add_symptoms                   shift and go to state 4
    list_symptoms                  shift and go to state 5
    diagnose_patient               shift and go to state 6
    specific_diagnose              shift and go to state 7
    add_conditions                 shift and go to state 8
    create_illness                 shift and go to state 9
    remove_illness                 shift and go to state 10
    remove_patient                 shift and go to state 11
    queue                          shift and go to state 12
    attend                         shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> function .

    $end            reduce using rule 1 (program -> function .)


state 3

    (2) program -> create_patient .

    $end            reduce using rule 2 (program -> create_patient .)


state 4

    (3) program -> add_symptoms .

    $end            reduce using rule 3 (program -> add_symptoms .)


state 5

    (4) program -> list_symptoms .

    $end            reduce using rule 4 (program -> list_symptoms .)


state 6

    (5) program -> diagnose_patient .

    $end            reduce using rule 5 (program -> diagnose_patient .)


state 7

    (6) program -> specific_diagnose .

    $end            reduce using rule 6 (program -> specific_diagnose .)


state 8

    (7) program -> add_conditions .

    $end            reduce using rule 7 (program -> add_conditions .)


state 9

    (8) program -> create_illness .

    $end            reduce using rule 8 (program -> create_illness .)


state 10

    (9) program -> remove_illness .

    $end            reduce using rule 9 (program -> remove_illness .)


state 11

    (10) program -> remove_patient .

    $end            reduce using rule 10 (program -> remove_patient .)


state 12

    (11) program -> queue .

    $end            reduce using rule 11 (program -> queue .)


state 13

    (12) program -> attend .

    $end            reduce using rule 12 (program -> attend .)


state 14

    (13) program -> NEWLINE .

    $end            reduce using rule 13 (program -> NEWLINE .)


state 15

    (16) function -> ID .
    (17) create_patient -> ID . PERIOD CREATE LP RP
    (19) add_symptoms -> ID . PERIOD HAS LP ID RP
    (20) list_symptoms -> ID . PERIOD LIST LP RP
    (22) diagnose_patient -> ID . PERIOD DIAGNOSE LP RP
    (23) specific_diagnose -> ID . PERIOD AILMENT LP ID RP PERIOD DIAGNOSE LP RP
    (21) remove_patient -> ID . PERIOD REMOVE LP RP
    (24) queue -> ID . LP ID RP
    (25) attend -> ID . LP RP

    $end            reduce using rule 16 (function -> ID .)
    PERIOD          shift and go to state 17
    LP              shift and go to state 18


state 16

    (18) add_conditions -> AILMENT . LP ID RP PERIOD ADD LP ID RP
    (14) create_illness -> AILMENT . LP ID RP PERIOD CREATE LP RP
    (15) remove_illness -> AILMENT . LP ID RP PERIOD REMOVE LP RP

    LP              shift and go to state 19


state 17

    (17) create_patient -> ID PERIOD . CREATE LP RP
    (19) add_symptoms -> ID PERIOD . HAS LP ID RP
    (20) list_symptoms -> ID PERIOD . LIST LP RP
    (22) diagnose_patient -> ID PERIOD . DIAGNOSE LP RP
    (23) specific_diagnose -> ID PERIOD . AILMENT LP ID RP PERIOD DIAGNOSE LP RP
    (21) remove_patient -> ID PERIOD . REMOVE LP RP

    CREATE          shift and go to state 20
    HAS             shift and go to state 21
    LIST            shift and go to state 22
    DIAGNOSE        shift and go to state 23
    AILMENT         shift and go to state 24
    REMOVE          shift and go to state 25


state 18

    (24) queue -> ID LP . ID RP
    (25) attend -> ID LP . RP

    ID              shift and go to state 26
    RP              shift and go to state 27


state 19

    (18) add_conditions -> AILMENT LP . ID RP PERIOD ADD LP ID RP
    (14) create_illness -> AILMENT LP . ID RP PERIOD CREATE LP RP
    (15) remove_illness -> AILMENT LP . ID RP PERIOD REMOVE LP RP

    ID              shift and go to state 28


state 20

    (17) create_patient -> ID PERIOD CREATE . LP RP

    LP              shift and go to state 29


state 21

    (19) add_symptoms -> ID PERIOD HAS . LP ID RP

    LP              shift and go to state 30


state 22

    (20) list_symptoms -> ID PERIOD LIST . LP RP

    LP              shift and go to state 31


state 23

    (22) diagnose_patient -> ID PERIOD DIAGNOSE . LP RP

    LP              shift and go to state 32


state 24

    (23) specific_diagnose -> ID PERIOD AILMENT . LP ID RP PERIOD DIAGNOSE LP RP

    LP              shift and go to state 33


state 25

    (21) remove_patient -> ID PERIOD REMOVE . LP RP

    LP              shift and go to state 34


state 26

    (24) queue -> ID LP ID . RP

    RP              shift and go to state 35


state 27

    (25) attend -> ID LP RP .

    $end            reduce using rule 25 (attend -> ID LP RP .)


state 28

    (18) add_conditions -> AILMENT LP ID . RP PERIOD ADD LP ID RP
    (14) create_illness -> AILMENT LP ID . RP PERIOD CREATE LP RP
    (15) remove_illness -> AILMENT LP ID . RP PERIOD REMOVE LP RP

    RP              shift and go to state 36


state 29

    (17) create_patient -> ID PERIOD CREATE LP . RP

    RP              shift and go to state 37


state 30

    (19) add_symptoms -> ID PERIOD HAS LP . ID RP

    ID              shift and go to state 38


state 31

    (20) list_symptoms -> ID PERIOD LIST LP . RP

    RP              shift and go to state 39


state 32

    (22) diagnose_patient -> ID PERIOD DIAGNOSE LP . RP

    RP              shift and go to state 40


state 33

    (23) specific_diagnose -> ID PERIOD AILMENT LP . ID RP PERIOD DIAGNOSE LP RP

    ID              shift and go to state 41


state 34

    (21) remove_patient -> ID PERIOD REMOVE LP . RP

    RP              shift and go to state 42


state 35

    (24) queue -> ID LP ID RP .

    $end            reduce using rule 24 (queue -> ID LP ID RP .)


state 36

    (18) add_conditions -> AILMENT LP ID RP . PERIOD ADD LP ID RP
    (14) create_illness -> AILMENT LP ID RP . PERIOD CREATE LP RP
    (15) remove_illness -> AILMENT LP ID RP . PERIOD REMOVE LP RP

    PERIOD          shift and go to state 43


state 37

    (17) create_patient -> ID PERIOD CREATE LP RP .

    $end            reduce using rule 17 (create_patient -> ID PERIOD CREATE LP RP .)


state 38

    (19) add_symptoms -> ID PERIOD HAS LP ID . RP

    RP              shift and go to state 44


state 39

    (20) list_symptoms -> ID PERIOD LIST LP RP .

    $end            reduce using rule 20 (list_symptoms -> ID PERIOD LIST LP RP .)


state 40

    (22) diagnose_patient -> ID PERIOD DIAGNOSE LP RP .

    $end            reduce using rule 22 (diagnose_patient -> ID PERIOD DIAGNOSE LP RP .)


state 41

    (23) specific_diagnose -> ID PERIOD AILMENT LP ID . RP PERIOD DIAGNOSE LP RP

    RP              shift and go to state 45


state 42

    (21) remove_patient -> ID PERIOD REMOVE LP RP .

    $end            reduce using rule 21 (remove_patient -> ID PERIOD REMOVE LP RP .)


state 43

    (18) add_conditions -> AILMENT LP ID RP PERIOD . ADD LP ID RP
    (14) create_illness -> AILMENT LP ID RP PERIOD . CREATE LP RP
    (15) remove_illness -> AILMENT LP ID RP PERIOD . REMOVE LP RP

    ADD             shift and go to state 46
    CREATE          shift and go to state 47
    REMOVE          shift and go to state 48


state 44

    (19) add_symptoms -> ID PERIOD HAS LP ID RP .

    $end            reduce using rule 19 (add_symptoms -> ID PERIOD HAS LP ID RP .)


state 45

    (23) specific_diagnose -> ID PERIOD AILMENT LP ID RP . PERIOD DIAGNOSE LP RP

    PERIOD          shift and go to state 49


state 46

    (18) add_conditions -> AILMENT LP ID RP PERIOD ADD . LP ID RP

    LP              shift and go to state 50


state 47

    (14) create_illness -> AILMENT LP ID RP PERIOD CREATE . LP RP

    LP              shift and go to state 51


state 48

    (15) remove_illness -> AILMENT LP ID RP PERIOD REMOVE . LP RP

    LP              shift and go to state 52


state 49

    (23) specific_diagnose -> ID PERIOD AILMENT LP ID RP PERIOD . DIAGNOSE LP RP

    DIAGNOSE        shift and go to state 53


state 50

    (18) add_conditions -> AILMENT LP ID RP PERIOD ADD LP . ID RP

    ID              shift and go to state 54


state 51

    (14) create_illness -> AILMENT LP ID RP PERIOD CREATE LP . RP

    RP              shift and go to state 55


state 52

    (15) remove_illness -> AILMENT LP ID RP PERIOD REMOVE LP . RP

    RP              shift and go to state 56


state 53

    (23) specific_diagnose -> ID PERIOD AILMENT LP ID RP PERIOD DIAGNOSE . LP RP

    LP              shift and go to state 57


state 54

    (18) add_conditions -> AILMENT LP ID RP PERIOD ADD LP ID . RP

    RP              shift and go to state 58


state 55

    (14) create_illness -> AILMENT LP ID RP PERIOD CREATE LP RP .

    $end            reduce using rule 14 (create_illness -> AILMENT LP ID RP PERIOD CREATE LP RP .)


state 56

    (15) remove_illness -> AILMENT LP ID RP PERIOD REMOVE LP RP .

    $end            reduce using rule 15 (remove_illness -> AILMENT LP ID RP PERIOD REMOVE LP RP .)


state 57

    (23) specific_diagnose -> ID PERIOD AILMENT LP ID RP PERIOD DIAGNOSE LP . RP

    RP              shift and go to state 59


state 58

    (18) add_conditions -> AILMENT LP ID RP PERIOD ADD LP ID RP .

    $end            reduce using rule 18 (add_conditions -> AILMENT LP ID RP PERIOD ADD LP ID RP .)


state 59

    (23) specific_diagnose -> ID PERIOD AILMENT LP ID RP PERIOD DIAGNOSE LP RP .

    $end            reduce using rule 23 (specific_diagnose -> ID PERIOD AILMENT LP ID RP PERIOD DIAGNOSE LP RP .)

